--- a/lit.bib
+++ b/lit.bib
@@ -140,3 +140,10 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977249/mod_resource/content/2/V503.pdf},
 }
 
+@online{v504,
+	title        = {V504 - Thermische Elektronenemission},
+	organization = {TU Dortmund},
+	urldate      = {2022-05-12},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933354/mod_resource/content/2/V504.pdf},
+}
+
