--- a/v504/content/auswertung.tex
+++ b/v504/content/auswertung.tex
@@ -4,9 +4,29 @@
 \begin{figure}
   \centering
   \includegraphics{plot1.pdf}
-  \caption{Plot.}
+  \caption{4 Kennlinien der Hochvakuumdiode. Der ungefähre Wert des Sättigungsstromes ist als gestrichelte Linie eingezeichnet.
+           Erstellt mit \textit{matplotlib} \cite{matplotlib}.}
   \label{fig:plot}
 \end{figure}
 
 
-Siehe \autoref{fig:plot}!
+\begin{figure}
+  \centering
+  \includegraphics{plot2.pdf}
+  \caption{Aufgezeichnete Kennlinie zur maximalen Stromstärke $I = \qty{2.5}{\ampere}$. Es ist zu erkennen, dass der Sättigungsbereich noch nicht erreicht wurde.}
+  \label{fig:plot2}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics{Raumladung.pdf}
+  \caption{Kennlinie mit Potenz $I^{2/3}$ zur Darstellung des Raumladungsgebiets (links). Messwerte und Ausgleichsfunktion (rechts).}
+  \label{fig:Raumladung}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics{Anlaufstrom.pdf}
+  \caption{Anlaufstromgebiet mit logarithmischer Darstellung der Stromstärken zur Bestimmung einer linearen Ausgleichsgeraden.}
+  \label{fig:Anlaufstrom}
+\end{figure}
