--- a/v504/content/auswertung.tex
+++ b/v504/content/auswertung.tex
@@ -20,7 +20,7 @@
 \begin{figure}
   \centering
   \includegraphics{Raumladung.pdf}
-  \caption{Kennlinie mit Potenz $I^{2/3}$ zur Darstellung des Raumladungsgebiets (links). Messwerte und Ausgleichsfunktion (rechts).}
+  \caption{Raumladungsbereich der $I = \qty{2.5}{\ampere}$ Kennlinie (logarithmisiert) und lineare Ausgleichsgeraden.}
   \label{fig:Raumladung}
 \end{figure}
 
