--- a/v504/content/diskussion.tex
+++ b/v504/content/diskussion.tex
@@ -1,2 +1,31 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Im ersten Teil des Versuches wurden Kennlinien der Hochvakuumdiode zu verschiedenen Heizströmen aufgenommen. Dabei ergab sich die Schwierigkeit, dass bei höheren
+Stromstärken kein konstanter Wert des Sättigungsstromes erreicht werden konnte, weshalb nur ein ungefährer Wert angegeben werden kann. Diese Unsicherheit wirkt 
+sich auf die im weiteren Verlauf berechneten Werte aus. 
+
+Bei der Untersuchung des Langmuir-Schottkyschen Raumladungsgesetzes wurde der Exponent der Spannung-Strom Abhängigkeit zu $m = \num{1.429(0.017)}$ bestimmt.
+Dies stellt eine relative Abweichung von $\symup{\Delta}_\text{rel}(m) = \qty{4.73}{\percent}$ zum Literaturwert $m_\text{Lit} = 1.5$ dar, welche sich gemäß
+der Gleichung
+\begin{equation*}
+    \symup{\Delta}_\text{rel}(x) = \frac{|x - x^*|}{x^*}
+\end{equation*}
+berechnet. Dabei sei $x$ ein Messergebnis und $x^*$ der Literaturwert. Eine Ursache für diese Abweichung ist die allgemeine Unsicherheit der Messwerte und die
+Tatsache, dass der Bereich des Raumladungsgebiets nicht mit absoluter Genauigkeit von anderen Messwerten differenziert werden kann. Des Weiteren erlaubt der 
+Geradenansatz $f(x) = mx + b$, welcher zur Bestimmung des Exponenten $m$ verwendet wurde einen weiteren Freiheitsgrad $b$, der eigentlich durch die Vorfaktoren
+des Raumladungsgesetzes festgelegt ist. Unter Beachtung dieser möglichen Fehlerquellen wurde $m$ mit ausreichender Präzision bestimmt.
+
+Im nächsten Teil des Versuches wurde das Anlaufstromgebiet der Kennlinie zu $I_\text{H} = \qty{2.5}{\ampere}$ untersucht. Aus dieser kann die Kathodentemperatur
+$T = \qty{2473+-80}{\kelvin}.$ ermittelt werden. Diese lässt sich nicht direkt mit Realwerten vergleichen, jedoch kann die Abweichung zu der aus der Leistungsbilanz
+berechneten Kathodentemperatur $T_2 = \qty{2237.5}{\kelvin}$ bestimmt werden. Es ergibt sich eine Abweichung von $\symup{\Delta}_\text{rel} = \qty{10.53}{\percent}$.
+Ursachen für diese Diskrepanz der beiden Messwerte sind die zur Berechnung getroffenen Näherungen und Annahmen, sowie die Unsicherheit der Messwerte, die sich
+beispielsweise im Sprung der Messwerte in \autoref{fig:Anlaufstrom} verdeutlicht. Der genannte Sprung ist dabei auf einen Skalenwechsel des Messinstrumentes 
+zurückzuführen.
+
+Im letzten Teil des Versuches wurde ein experimenteller Wert der Austrittsarbeit ermittelt. Der Mittelwert aller Messreihen lautet 
+$\overline{\phi} = \qty{4.59(0.19)}{\electronvolt}$. In der Literatur lässt sich für die Austrittsarbeit der Elektronen in Wolfram der Wert 
+$\phi_\text{Lit} = \qty{4.55}{\electronvolt}$ \cite{Ingenieurwissen} finden. Die relative Abweichung des Messwertes ergibt sich zu 
+$\symup{\Delta} (\phi) = \qty{0.88}{\percent}$. Im Anbetracht der Tatsache, dass die Messwerte einer gewissen Unsicherheit unterliegen und die reale Austrittsarbeit
+der Kathode durch etwaige Verunreinigungen nicht genau dem Literaturwert entsprechen muss, bedarf es keiner Rechtfertigung der Abweichung. 
+
+Insgesamt ist das Ziel des Versuches erfüllt und die experimentelle Bestimmung der geforderten Werte gelungen.
