--- a/v504/content/anhang.tex
+++ b/v504/content/anhang.tex
@@ -5,12 +5,26 @@
 
 \begin{figure}
     \centering
-    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 1, scale=0.75]{content/MessdatenV504.pdf}
 \end{figure}
 
 \newpage
 
 \begin{figure}
     \centering
-    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 2, scale=0.75]{content/MessdatenV504.pdf}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+    \centering
+    \includepdf[page= 3, scale=0.75]{content/MessdatenV504.pdf}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+    \centering
+    \includepdf[page= 4, scale=0.75]{content/MessdatenV504.pdf}
 \end{figure}
