--- a/v504/content/diskussion.tex
+++ b/v504/content/diskussion.tex
@@ -12,11 +12,11 @@ der Gleichung
 \end{equation*}
 berechnet. Dabei sei $x$ ein Messergebnis und $x^*$ der Literaturwert. Eine Ursache für diese Abweichung ist die allgemeine Unsicherheit der Messwerte und die
 Tatsache, dass der Bereich des Raumladungsgebiets nicht mit absoluter Genauigkeit von anderen Messwerten differenziert werden kann. Des Weiteren erlaubt der 
-Geradenansatz $f(x) = mx + b$, welcher zur Bestimmung des Exponenten $m$ verwendet wurde einen weiteren Freiheitsgrad $b$, der eigentlich durch die Vorfaktoren
+Geradenansatz $f(x) = mx + b$, welcher zur Bestimmung des Exponenten $m$ verwendet wurde, einen weiteren Freiheitsgrad $b$, der eigentlich durch die Vorfaktoren
 des Raumladungsgesetzes festgelegt ist. Unter Beachtung dieser möglichen Fehlerquellen wurde $m$ mit ausreichender Präzision bestimmt.
 
 Im nächsten Teil des Versuches wurde das Anlaufstromgebiet der Kennlinie zu $I_\text{H} = \qty{2.5}{\ampere}$ untersucht. Aus dieser kann die Kathodentemperatur
-$T = \qty{2473+-80}{\kelvin}.$ ermittelt werden. Diese lässt sich nicht direkt mit Realwerten vergleichen, jedoch kann die Abweichung zu der aus der Leistungsbilanz
+$T = \qty{2473+-80}{\kelvin}$ ermittelt werden. Diese lässt sich nicht direkt mit Realwerten vergleichen, jedoch kann die Abweichung zu der aus der Leistungsbilanz
 berechneten Kathodentemperatur $T_2 = \qty{2237.5}{\kelvin}$ bestimmt werden. Es ergibt sich eine Abweichung von $\symup{\Delta}_\text{rel} = \qty{10.53}{\percent}$.
 Ursachen für diese Diskrepanz der beiden Messwerte sind die zur Berechnung getroffenen Näherungen und Annahmen, sowie die Unsicherheit der Messwerte, die sich
 beispielsweise im Sprung der Messwerte in \autoref{fig:Anlaufstrom} verdeutlicht. Der genannte Sprung ist dabei auf einen Skalenwechsel des Messinstrumentes 
