--- a/v504/content/durchfuehrung.tex
+++ b/v504/content/durchfuehrung.tex
@@ -4,7 +4,7 @@ Der Versuch gliedert sich in zwei Teile. Im ersten Teil wird eine Kennlinien der
 
 \subsection{Aufnahme der Kennlinien der Hochvakuumdiode}
 \label{subsec:D_Kennlinie}
-Zuerst wird eine Kennlinienschar der Hochvakuumdiode für fünf verschiedene Stromstärken der Heizstromkreises aufgenommen. Dazu wird der in \autoref{fig:Schaltplan1}
+Zuerst wird eine Kennlinienschar der Hochvakuumdiode für fünf verschiedene Stromstärken des Heizstromkreises aufgenommen. Dazu wird der in \autoref{fig:Schaltplan1}
 dargestellte Versuchsaufbau verwendet. Der XY-Schreiber wird nicht verwendet, da Spannung und Strom am Spannungsgerät abgelesen werden können.
 
 \begin{figure}
@@ -14,19 +14,19 @@ dargestellte Versuchsaufbau verwendet. Der XY-Schreiber wird nicht verwendet, da
     \label{fig:Schaltplan1}
 \end{figure}
 
-Am Konstantspannungsgerät des Heizkreises wird ein fester Strom eingestellt. Der Strom sollte dabei den maximalen Diodenstrom (hier: $\qty{2.5}{\ampere}$) nicht übersteigen,
-aber auch nicht unter $\qty{1.9}{\ampere}$ gewählt werden. Strom $I_\text{H}$ und zugehörige Heizspannung $U_\text{H}$ werden notiert. Anschließend werden Messwertepaare
+Am Konstantspannungsgerät des Heizkreises wird ein fester Strom eingestellt. Der Strom sollte dabei den maximalen Diodenstrom (hier: $\qty{2.5}{\ampere}$) nicht überschreiten,
+aber auch nicht unter $\qty{1.9}{\ampere}$ gewählt werden. Die Stromstärke $I_\text{H}$ und die zugehörige Heizspannung $U_\text{H}$ werden notiert. Anschließend werden Messwertepaare
 der Beschleunigungsspannung $U_\text{B}$ und des Anodenstromes $I_\text{A}$ genommen, bis der Bereich des Sättigungsstromes erreicht ist. Die Schrittweite der Spannung 
 sollte an die momentane Änderungsrate der Stromstärke angepasst werden, sodass bei größerer Steigung der Kennlinie mehr Messpunkte zur Verfügung stehen. Das Verfahren wird für
 insgesamt 5 Stromstärken des Heizkreises wiederholt, wobei der maximale Heizstrom unbedingt in einer Messreihe erreicht werden sollte.
 
 Aus den so erhaltenen Messdaten lässt sich der Sättigungsstrom zu jeder Kennlinie feststellen, woraus mit der jeweiligen Kathodentemperatur die Austrittsarbeit bestimmt werden kann.
-Ebenfalls soll der Exponent der Langmuir-Schottkyschen Raumladungsgleichung \ref{eqn:Raumladung} experimentell ermittelt werden.
+Ebenfalls soll der Exponent der Langmuir-Schottkyschen Raumladungsgleichung \eqref{eqn:Raumladung} experimentell ermittelt werden.
 
 \subsection{Untersuchung des Anlaufstromgebietes}
 \label{subsec:D_Anlaufstrom}
 Zur Vermessung des Anlaufstromgebietes wird die vorherige Schaltung leicht abgeändert. Der neue Schaltplan ist in \autoref{fig:Schaltplan2} dargestellt. 
-Da nur sehr geringe Ströme gemessen werden können wird ein sehr empfindliches Amperemeter verwendet.
+Da nur sehr geringe Ströme gemessen werden können, wird ein sehr empfindliches Amperemeter verwendet.
 
 \begin{figure}
     \centering
