--- a/v504/content/theorie.tex
+++ b/v504/content/theorie.tex
@@ -31,7 +31,7 @@ vereinfacht.
 \label{subsec:Glueelek}
 Da eine höhere Temperatur eine höhere kinetische Energie der Elektronen bedingt, können mehr Elektronen aus einem Kathodenmaterial austreten, je heißer dieses ist.
 Bei der Erzeugung freier Elektronen mithilfe einer Hochvakuumdiode wird dieser Effekt ausgenutzt. Die Glühkathode wird über einen Heizstrom $I_\text{H}$ aufgeheizt,
-sodass ausreichend Elektronene die Austrittsarbeit überwinden und das Material verlassen können. Über eine Beschleunigungsspannung (Saugspannung) $U_\text{B}$
+sodass ausreichend Elektronen die Austrittsarbeit überwinden und das Material verlassen können. Über eine Beschleunigungsspannung (Saugspannung) $U_\text{B}$
 wird ein elektrisches Feld zwischen Kathode und einer Anode erzeugt, in welchem die nun freien Elektronen in Richtung Anode beschleunigt werden. 
 In der Diode herrscht ein Hochvakuum, wodurch ein Wechselwirken der Elektronen mit Gasmolekülen vermieden wird.
 Der Aufbau einer solchen Diode und die Polung der Spannungen ist \autoref{fig:Hochvakuumdiode} zu entnehmen.
